# SPL_Token

./: Notes.md  Research.txt
spl-project/: .env  Anchor.toml  DEPLOY.md  README.md  TESTING.md  check-token.sh  deployment-info.json  package.json  revoke-authorities.sh
spl-project/programs/multisig-governance/: Cargo.toml
spl-project/programs/multisig-governance/src/: lib.rs
spl-project/programs/spl-project/: Cargo.toml
spl-project/programs/spl-project/src/: lib.rs
spl-project/scripts/: deploy.ts  revoke-authorities.ts
spl-project/tests/: nc-token.ts  spl-project.ts
