[package]
name = "multisig-governance"
version = "0.1.0"
description = "MultiSig Governance for NC Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
nc-token = { path = "../spl-project" }

[patch.crates-io]
zeroize = "1.8.1"

